<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- login_page strings -->

    <string name="app_name">Notes Express</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="don_t_have_an_account__sign_up_string">Dont have an account? Sign Up</string>
    <string name="forgot_password__string">Forgot Password?</string>
    <string name="login_string">Login</string>
    <string name="login_ek1_string">Login</string>
    <string name="password_string">PASSWORD</string>
    <string name="username_string">USERNAME</string>

    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
</resources>