<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".loginPage"
	android:background="@color/black">

	<View
		android:id="@+id/topView"
		android:layout_width="0dp"
		android:layout_height="150dp"
		android:background="#1f1d2c"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<View
		android:id="@+id/view5"
		android:layout_width="0dp"
		android:layout_height="100dp"
		android:background="@drawable/wave"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/topView" />

	<ImageView
		android:id="@+id/imageView5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:layout_marginEnd="104dp"
		android:contentDescription="@string/top_icon"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_person" />

	<TextView
		android:id="@+id/topText"
		android:layout_width="219dp"
		android:layout_height="64dp"
		android:layout_marginStart="32dp"
		android:layout_marginTop="44dp"
		android:gravity="center"
		android:text="Login"
		android:textColor="@android:color/white"
		android:textSize="50sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toStartOf="@+id/imageView5"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="@+id/topView"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/inputUsername"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="32dp"
		android:layout_marginEnd="32dp"
		android:background="@drawable/round_border"
		android:drawableLeft="@drawable/ic_baseline_person_24"
		android:textColor="#ffffff"
		android:textColorHint="#ffffff"
		android:drawablePadding="16dp"
		android:ems="10"
		android:hint="UserName"
		android:inputType="textEmailAddress"
		android:padding="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/view5"
		/>

	<EditText
		android:id="@+id/inputPassword"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="32dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="32dp"
		android:background="@drawable/round_border"
		android:drawableStart="@drawable/ic_baseline_lock_24"
		android:textColor="#ffffff"
		android:textColorHint="#ffffff"
		android:drawablePadding="16dp"
		android:ems="10"
		android:hint="@string/password"
		android:inputType="textPassword"
		android:padding="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/inputUsername" />

	<Button
		android:id="@+id/btnLogin"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="32dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="32dp"
		android:background="@drawable/round_bg"
		android:backgroundTint="#1f1d2c"
		android:text="@string/login"
		android:textColor="@android:color/white"
		android:textSize="18sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

	<TextView
		android:id="@+id/forgotPassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="32dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="32dp"
		android:text="@string/forgot_password"
		android:textColor="#adefd1ff"
		android:textSize="18sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

	<TextView
		android:id="@+id/textView7"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:text="@string/or"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />



	<TextView
		android:id="@+id/gotoRegister"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="32dp"
		android:layout_marginTop="32dp"
		android:layout_marginEnd="32dp"
		android:text="@string/new_user_register_now"
		android:textColor="#ff6700"
		android:textSize="18sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>